fixed some logic

--- a/untitled/src/main/resources/application.properties
+++ b/untitled/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port=8080
+server.port=8081
 
-spring.application.name=eclient
+spring.application.name=aclient
 
 eureka.client.service-url.defaultZone=http://localhost:8082/eureka
 
